--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 	<h3></h3>
 	<button class="generate-random">GENERATE RANDOM BACKGROUND COLOUR</button>
 	<script type="text/javascript" src="./ntc.js"></script>
-	<script type="text/javascript" src="./script.js"></script>
+	<script type="text/javascript" src="./bundle.js"></script>
 </body>
 </html>
