--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poller+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body id="gradient" onload="setGradient()">
+<body id="gradient">
 	<h1>Background Generator</h1>
 	<input class="color1" type="color" name="color1" value="#00ff00">
 	<input class="color2" type="color" name="color2" value="#ff0000">
